<resources>
    <string name="app_name">ContactAppWithInternet</string>
    <string name="contacts_is_empty">Contacts Is Empty</string>
    <string name="my_contacts">Contact app</string>
    <string name="contact_name">Contact name</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="add_contact">Add contact</string>
    <string name="a">A</string>
    <string name="confirm_password">Confirm password\n</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_account_1">Create account for Contact app</string>
    <string name="code">Code</string>
    <string name="login_account">Login account for contact app!</string>
    <string name="login_account2">Login account!</string>
</resources>